--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest",
+    "test:watch": "jest --watch --notify"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -18,6 +20,8 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "jest": "^29.0.3",
+    "node-notifier": "^10.0.1",
     "nodemon": "^2.0.19"
   }
 }
